# acoustic-no

./: .gitignore  README.md  flake.nix  pyproject.toml
notebooks/: acoustic-cno-eval.ipynb  acoustic-cno.ipynb  acoustic-fno-eval.ipynb  acoustic-fno.ipynb  audio-generator.ipynb  cno-playground.ipynb  dataset-usage-example.ipynb  eval.ipynb  fno-playground.ipynb  read-frames.ipynb
outputs/cno/: evaluation_metrics.txt
outputs/ufno/: evaluation_metrics.txt
scripts/: convert-dataset-format.py  eval-cno.py  eval-script.py  eval-ufno.py  generate_dataset.py  preprocess-dataset.py  train-cno.py  train-fno-baseline.py  train-ufno.py
src/acoustic_no/: data.py  data_utils.py  models.py
src/acoustic_no/cno/: cno_layers.py  cno_model.py
src/acoustic_no/fdtd_solver/: grid.py  object.py  solver.py
src/acoustic_no/utils/: audio_utils.py  eval.py
