[project]
name = "acoustic-no"
version = "0.1.0"
description = "Stanford CS 231N Acoustic NO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "neuraloperator>=1.0.2",
    "numpy>=2.2.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "taichi>=1.7.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
]

[tool.pyright]
reportInvalidTypeForm = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
